--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <nav>
       <h1 href="#">GigGrabber</h1>
+      <img src="" alt="" />
       <div class="search-container">
         <form>
           <input type="text" placeholder="Search..." />
