--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
   </head>
   <body>
     <nav>
-      <h1 href="#">GigGrabber</h1>
-      <img src="" alt="" />
+      <div class="nav-left">
+        <img class="icon" src="./assets/img/live-music.png" alt="" />
+        <h1 href="#">GigGrabber</h1>
+      </div>
       <div class="search-container">
         <form>
-          <input type="text" placeholder="Search..." />
+          <input class="input" type="text" placeholder="Search..." />
           <button type="submit">Search</button>
         </form>
       </div>
     </nav>
+    <div class="results-container">
+      <div></div>
+    </div>
   </body>
 </html>
