--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page</title>
+    <title>GigGrabber</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
@@ -18,7 +18,14 @@
       </div>
     </nav>
     <div class="results-container">
-      <div></div>
+      <div class="results-songkick">
+        <article class="card">div</article>
+        <article class="card">div</article>
+        <article class="card">div</article>
+      </div>
+      <div class="results-spotify">
+        <article class="card-spot">div</article>
+      </div>
     </div>
   </body>
 </html>
