--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     </nav>
     <div class="results-container">
       <div class="results-songkick">
-        <article class="card">div</article>
-        <article class="card">div</article>
-        <article class="card">div</article>
+        <article class="card">content</article>
+        <article class="card">content</article>
+        <article class="card">content</article>
       </div>
       <div class="results-spotify">
-        <article class="card-spot">div</article>
+        <article class="card-spot">content</article>
       </div>
     </div>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
