--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="search-container">
         <form>
           <input class="input" type="text" placeholder="Search..." />
-          <button type="submit">Search</button>
+          <button class="btn" type="submit">Search</button>
         </form>
       </div>
     </nav>
