--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
         <article class="card-spot">div</article>
       </div>
     </div>
+    <script src="./assets/JS/script.js"></script>
   </body>
 </html>
