--- a/index.html
+++ b/index.html
@@ -19,11 +19,18 @@
     </nav>
     <div class="results-container">
       <div class="results-songkick">
+        <h2>Search Results...</h2>
+        <article class="card">div</article>
+        <article class="card">div</article>
+        <article class="card">div</article>
+        <article class="card">div</article>
+        <article class="card">div</article>
         <article class="card">div</article>
         <article class="card">div</article>
         <article class="card">div</article>
       </div>
       <div class="results-spotify">
+        <h2>Top Hits</h2>
         <article class="card-spot">div</article>
       </div>
     </div>
