rendered search results to page

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
       </div>
     </nav>
     <div class="results-container">
-      <div class="results-songkick">
-        <h2>Search Results...</h2>
+      <div class="results-bandsintown">
+        <!-- <h2>Search Results...</h2> -->
+        <!-- <article class="card">div</article>
         <article class="card">div</article>
         <article class="card">div</article>
         <article class="card">div</article>
         <article class="card">div</article>
         <article class="card">div</article>
         <article class="card">div</article>
-        <article class="card">div</article>
-        <article class="card">div</article>
+        <article class="card">div</article> -->
       </div>
       <div class="results-spotify">
         <h2>Top Hits</h2>
