--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
     </nav>
     <div class="results-container">
-      <div class="results-songkick">
+      <div class="results-bandsintown">
         <article class="card">div</article>
         <article class="card">div</article>
         <article class="card">div</article>
