Added the homepage. Top Streaming Artists & Songs.

--- a/index.html
+++ b/index.html
@@ -1,22 +1,57 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>GigGrabber</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
-  </head>
-  <body>
-    <nav>
-      <div class="nav-left">
-        <img class="icon" src="./assets/img/live-music.png" alt="" />
-        <h1 href="#">GigGrabber</h1>
-      </div>
-      <div class="search-container">
-        <form>
-          <input class="input" type="text" placeholder="Search..." />
-          <button class="btn" type="submit">Search</button>
-        </form>
-      </div>
-    </nav>
+
+<head>
+  <title>GigGrabber</title>
+  <link rel="stylesheet" href="./assets/css/style.css" />
+</head>
+
+<body>
+  <nav>
+    <div class="nav-left">
+      <img class="icon" src="./assets/img/live-music.png" alt="" />
+      <h1 href="#">GigGrabber</h1>
+    </div>
+    <div class="search-container">
+      <form>
+        <input class="input" type="text" placeholder="Search..." />
+        <button class="btn" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+  <div class="homepage" id="home-page">
+
+    <div class="topartists">
+      <h2>Top 10 Streaming Artists</h2>
+      <ol class="art-name">
+        <li>Drake</li>
+        <li>Bad Bunny</li>
+        <li>Taylor Swift</li>
+        <li>Ed Sheeran</li>
+        <li>The Weeknd</li>
+        <li>Justin Bieber</li>
+        <li>Ariana Grande</li>
+        <li>Eminem</li>
+        <li>BTS</li>
+        <li>Post Malone</li>
+      </ol>
+    </div>
+    <div class="topsongs">
+      <h2>Top 10 Streaming Songs</h2>
+      <ol class="song-name">
+        <li>Blinding Lights</li>
+        <li>Shape of You</li>
+        <li>Dance Monkey</li>
+        <li>Someone You Loved</li>
+        <li>Rockstar</li>
+        <li>Sunflower</li>
+        <li>One Dance</li>
+        <li>Closer</li>
+        <li>STAY (with Justin Bieber)</li>
+        <li>Believer</li>
+      </ol>
+
+    </div>
     <div class="results-container">
       <div class="results-bandsintown">
         <!-- <h2>Search Results...</h2> -->
@@ -35,5 +70,6 @@
       </div>
     </div>
     <script src="./assets/JS/script.js"></script>
-  </body>
+</body>
+
 </html>
