--- a/index.html
+++ b/index.html
@@ -17,23 +17,24 @@
         </form>
       </div>
     </nav>
+
     <div class="results-container">
       <div class="results-bandsintown">
         <!-- <h2>Search Results...</h2> -->
+        <!-- <article id="top-artist" class="card">top artist upcoming shows</article> -->
         <!-- <article class="card">div</article>
         <article class="card">div</article>
         <article class="card">div</article>
         <article class="card">div</article>
         <article class="card">div</article>
         <article class="card">div</article>
-        <article class="card">div</article>
         <article class="card">div</article> -->
-      </div>
+      <!-- </div>
       <div class="results-spotify">
         <h2>Top Hits</h2>
         <article class="card-spot">div</article>
       </div>
-    </div>
+    </div> -->
     <script src="./assets/JS/script.js"></script>
   </body>
 </html>
