--- a/index.html
+++ b/index.html
@@ -25,43 +25,43 @@
       <h2>Top 10 Streaming Artists</h2>
       <ol class="art-name">
         <li>
-          <img src="./assets/img/drake.jpg"/>
+          <img class="profpic" src="./assets/img/drake.jpg"/>
           Drake
         </li>
         <li>
-          <img src="./assets/img/badbun.jpg"/>
+          <img class="profpic" src="./assets/img/badbun.jpg"/>
           Bad Bunny
         </li>
         <li>
-          <img src="./assets/img/tayswf.jpg"/>
+          <img class="profpic" src="./assets/img/tayswf.jpg"/>
           Taylor Swift
         </li>
         <li>
-          <img src="./assets/img/edshee.jpg"/>
+          <img class="profpic" src="./assets/img/edshee.jpg"/>
           Ed Sheeran
         </li>
         <li>
-          <img src="./assets/img/weeknd.jpg"/>
+          <img class="profpic" src="./assets/img/weeknd.jpg"/>
           The Weeknd
         </li>
         <li>
-          <img src="./assets/img/jb.jpg"/>
+          <img class="profpic" src="./assets/img/jb.jpg"/>
           Justin Bieber
         </li>
         <li>
-          <img src="./assets/img/arigran.jpg"/>
+          <img class="profpic" src="./assets/img/arigran.jpg"/>
           Ariana Grande
         </li>
         <li>
-          <img src="./assets/img/mm.jpg"/>
+          <img class="profpic" src="./assets/img/mm.jpg"/>
           Eminem
         </li>
         <li>
-          <img src="./assets/img/bts.jpg"/>
+          <img class="profpic" src="./assets/img/bts.jpg"/>
           BTS
         </li>
         <li>
-          <img src="./assets/img/posty.jpg"/>
+          <img class="profpic" src="./assets/img/posty.jpg"/>
           Post Malone
         </li>
       </ol>
@@ -71,43 +71,43 @@
       <h2>Top 10 Streaming Songs</h2>
       <ol class="song-name">
         <li>
-          <img src="./assets/img/blind.jpg"/>
+          <img class="profpic" src="./assets/img/blind.jpg"/>
           Blinding Lights
         </li>
         <li>
-          <img src="./assets/img/shape.jpg"/>
+          <img class="profpic" src="./assets/img/shape.jpg"/>
           Shape of You
         </li>
         <li>
-          <img src="./assets/img/monkey.jpg"/>
+          <img class="profpic" src="./assets/img/monkey.jpg"/>
           Dance Monkey
         </li>
         <li>
-          <img src="./assets/img/someone.jpg"/>
+          <img class="profpic" src="./assets/img/someone.jpg"/>
           Someone You Loved
         </li>
         <li>
-          <img src="./assets/img/rockstar.jpg"/>
+          <img class="profpic" src="./assets/img/rockstar.jpg"/>
           Rockstar
         </li>
         <li>
-          <img src="./assets/img/sunflower.jpg"/>
+          <img class="profpic" src="./assets/img/sunflower.jpg"/>
           Sunflower
         </li>
         <li>
-          <img src="./assets/img/onedance.jpg"/>
+          <img class="profpic" src="./assets/img/onedance.jpg"/>
           One Dance
         </li>
         <li>
-          <img src="./assets/img/closer.jpg"/>
+          <img class="profpic" src="./assets/img/closer.jpg"/>
           Closer
         </li>
         <li>
-          <img src="./assets/img/stay.jpg"/>
+          <img class="profpic" src="./assets/img/stay.jpg"/>
           STAY (with Justin Bieber)
         </li>
         <li>
-          <img src="./assets/img/believer.jpg"/>
+          <img class="profpic" src="./assets/img/believer.jpg"/>
           Believer
         </li>
       </ol>
