--- a/index.html
+++ b/index.html
@@ -1,134 +1,125 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>GigGrabber</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
 
-<head>
-  <title>GigGrabber</title>
-  <link rel="stylesheet" href="./assets/css/style.css" />
-</head>
-
-<body>
-  <nav>
-    <div class="nav-left">
-      <img class="icon" src="./assets/img/live-music.png" alt="" />
-      <h1 href="#">GigGrabber</h1>
-    </div>
-    <div class="search-container">
-      <form>
-        <input class="input" type="text" placeholder="Search..." />
-        <button class="btn" type="submit">Search</button>
-      </form>
-    </div>
-  </nav>
-
-  <div class="homepage" id="home-page">
-    <div class="topartists">
-      <h2>Top 10 Streaming Artists</h2>
-      <ol class="art-name">
-        <li>
-          <img class="profpic" src="./assets/img/drake.jpg"/>
-          Drake
-        </li>
-        <li>
-          <img class="profpic" src="./assets/img/badbun.jpg"/>
-          Bad Bunny
-        </li>
-        <li>
-          <img class="profpic" src="./assets/img/tayswf.jpg"/>
-          Taylor Swift
-        </li>
-        <li>
-          <img class="profpic" src="./assets/img/edshee.jpg"/>
-          Ed Sheeran
-        </li>
-        <li>
-          <img class="profpic" src="./assets/img/weeknd.jpg"/>
-          The Weeknd
-        </li>
-        <li>
-          <img class="profpic" src="./assets/img/jb.jpg"/>
-          Justin Bieber
-        </li>
-        <li>
-          <img class="profpic" src="./assets/img/arigran.jpg"/>
-          Ariana Grande
-        </li>
-        <li>
-          <img class="profpic" src="./assets/img/mm.jpg"/>
-          Eminem
-        </li>
-        <li>
-          <img class="profpic" src="./assets/img/bts.jpg"/>
-          BTS
-        </li>
-        <li>
-          <img class="profpic" src="./assets/img/posty.jpg"/>
-          Post Malone
-        </li>
-      </ol>
-    </div>
-
-    <div class="topsongs">
-      <h2>Top 10 Streaming Songs</h2>
-      <ol class="song-name">
-        <li>
-          <img class="profpic" src="./assets/img/blind.jpg"/>
-          Blinding Lights
-        </li>
-        <li>
-          <img class="profpic" src="./assets/img/shape.jpg"/>
-          Shape of You
-        </li>
-        <li>
-          <img class="profpic" src="./assets/img/monkey.jpg"/>
-          Dance Monkey
-        </li>
-        <li>
-          <img class="profpic" src="./assets/img/someone.jpg"/>
-          Someone You Loved
-        </li>
-        <li>
-          <img class="profpic" src="./assets/img/rockstar.jpg"/>
-          Rockstar
-        </li>
-        <li>
-          <img class="profpic" src="./assets/img/sunflower.jpg"/>
-          Sunflower
-        </li>
-        <li>
-          <img class="profpic" src="./assets/img/onedance.jpg"/>
-          One Dance
-        </li>
-        <li>
-          <img class="profpic" src="./assets/img/closer.jpg"/>
-          Closer
-        </li>
-        <li>
-          <img class="profpic" src="./assets/img/stay.jpg"/>
-          STAY (with Justin Bieber)
-        </li>
-        <li>
-          <img class="profpic" src="./assets/img/believer.jpg"/>
-          Believer
-        </li>
-      </ol>
-    </div>
-
-    <!-- <div class="results-container">
-      <div class="results-bandsintown">
-        <h2>Search Results...</h2>
-        <article class="card">div</article>
-        <article class="card">div</article>
-        <article class="card">div</article>
-        <article class="card">div</article>
-        <article class="card">div</article>
-        <article class="card">div</article>
-        <article class="card">div</article>
-      <div class="results-spotify">
-        <h2>Top Hits</h2>
-        <article class="card-spot">div</article>
+  <body>
+    <nav>
+      <div class="nav-left">
+        <img class="icon" src="./assets/img/live-music.png" alt="" />
+        <h1 href="#">GigGrabber</h1>
       </div>
-    </div> -->
-    <script src="./assets/JS/script.js"></script>
-</body>
+      <div class="search-container">
+        <form>
+          <input class="input" type="text" placeholder="Search..." />
+          <button class="btn" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+    <section class="page">
+      <div class="results-bandsintown">
+        <div class="header-bandsintown"></div>
+        <div class="card-container"></div>
+      </div>
+      <aside class="spotify"><div class="box">Spotify</div></aside>
+    </section>
 
+    <div class="homepage" id="home-page">
+      <div class="topartists">
+        <h2>Top 10 Streaming Artists</h2>
+        <ul class="art-name">
+          <li>
+            <img class="profpic" src="./assets/img/drake.jpg" />
+            Drake
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/badbun.jpg" />
+            Bad Bunny
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/tayswf.jpg" />
+            Taylor Swift
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/edshee.jpg" />
+            Ed Sheeran
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/weeknd.jpg" />
+            The Weeknd
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/jb.jpg" />
+            Justin Bieber
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/arigran.jpg" />
+            Ariana Grande
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/mm.jpg" />
+            Eminem
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/bts.jpg" />
+            BTS
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/posty.jpg" />
+            Post Malone
+          </li>
+        </ul>
+      </div>
+
+      <div class="topsongs">
+        <h2>Top 10 Streaming Songs</h2>
+        <ul class="song-name">
+          <li>
+            <img class="profpic" src="./assets/img/blind.jpg" />
+            Blinding Lights
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/shape.jpg" />
+            Shape of You
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/monkey.jpg" />
+            Dance Monkey
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/someone.jpg" />
+            Someone You Loved
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/rockstar.jpg" />
+            Rockstar
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/sunflower.jpg" />
+            Sunflower
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/onedance.jpg" />
+            One Dance
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/closer.jpg" />
+            Closer
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/stay.jpg" />
+            STAY (with Justin Bieber)
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/believer.jpg" />
+            Believer
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <script src="./assets/JS/script.js"></script>
+  </body>
 </html>
