added dropdown for spotify, needs the api before formatting

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
         <div class="header-bandsintown"></div>
         <div class="card-container"></div>
       </div>
-      <aside class="spotify"><div class="box">Spotify</div></aside>
+      <aside class="spotify dropdown">
+        <div class="box dropbtn">Spotify
+          <div class="dropdown-content">
+            <a href="#">Spotify</a>
+          </div>
+        </div>
+      </aside>
     </section>
 
     <div class="homepage" id="home-page">
