Changed the search bar placeholder to 'Search an artist...'

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
       <div class="search-container">
         <form>
-          <input class="input" type="text" placeholder="Search..." />
+          <input class="input" type="text" placeholder="Search an artist..." />
           <button class="btn" type="submit">Search</button>
         </form>
       </div>
