reformatted the top10 lists

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           </li>
           <li>
             <img class="profpic" src="./assets/img/stay.jpg" />
-            STAY (with Justin Bieber)
+            STAY (with JB)
           </li>
           <li>
             <img class="profpic" src="./assets/img/believer.jpg" />
