--- a/index.html
+++ b/index.html
@@ -121,5 +121,6 @@
     </div>
 
     <script src="./assets/JS/script.js"></script>
+    <script src="./assets/JS/spotify.js"></script>
   </body>
 </html>
