formatted fonts and made it beat

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>GigGrabber</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
-  </head>
 
-  <body>
+<head>
+  <title>GigGrabber</title>
+  <link rel="stylesheet" href="./assets/css/style.css" />
+</head>
+
+<body>
+  <i class="fa-solid fa-font">
     <nav>
       <div class="nav-left">
         <img class="icon" src="./assets/img/live-music.png" alt="" />
@@ -21,7 +23,7 @@
     <section class="page">
       <div class="results-bandsintown">
         <div class="header-bandsintown"></div>
-        <div class="card-container"></div>
+          <div class="card-container"></div>
       </div>
       <aside class="spotify dropdown">
         <div class="box dropbtn">Spotify
@@ -125,7 +127,9 @@
         </ul>
       </div>
     </div>
+  </i>
+  <script src="./assets/JS/script.js"></script>
+  <script src="https://kit.fontawesome.com/3c42d1678b.js" crossorigin="anonymous"></script>
+</body>
 
-    <script src="./assets/JS/script.js"></script>
-  </body>
 </html>
