--- a/index.html
+++ b/index.html
@@ -6,130 +6,127 @@
   </head>
 
   <body>
-      <nav>
-        <div class="nav-left">
-          <img class="icon" src="./assets/img/live-music.png" alt="" />
-          <h1 href="#">GigGrabber</h1>
-        </div>
-        <div class="search-container">
-          <form>
-            <input
-              class="input"
-              type="text"
-              placeholder="Search an artist..."
-            />
-            <button class="btn" type="submit">Search</button>
-          </form>
-        </div>
-      </nav>
-      <section class="page">
-        <div class="results-bandsintown">
-          <div class="header-bandsintown"></div>
-          <div class="card-container"></div>
-        </div>
-        <aside class="spotify dropdown">
-          <div class="box dropbtn">
-            Spotify
-            <div class="dropdown-content">
-              <a href="#">Spotify</a>
-            </div>
-          </div>
-        </aside>
-      </section>
-
-      <div class="homepage" id="home-page">
-        <div class="topartists">
-          <h2>Top 10 Streaming Artists</h2>
-          <ul class="art-name">
-            <li>
-              <img class="profpic" src="./assets/img/drake.jpg" />
-              Drake
-            </li>
-            <li>
-              <img class="profpic" src="./assets/img/badbun.jpg" />
-              Bad Bunny
-            </li>
-            <li>
-              <img class="profpic" src="./assets/img/tayswf.jpg" />
-              Taylor Swift
-            </li>
-            <li>
-              <img class="profpic" src="./assets/img/edshee.jpg" />
-              Ed Sheeran
-            </li>
-            <li>
-              <img class="profpic" src="./assets/img/weeknd.jpg" />
-              The Weeknd
-            </li>
-            <li>
-              <img class="profpic" src="./assets/img/jb.jpg" />
-              Justin Bieber
-            </li>
-            <li>
-              <img class="profpic" src="./assets/img/arigran.jpg" />
-              Ariana Grande
-            </li>
-            <li>
-              <img class="profpic" src="./assets/img/mm.jpg" />
-              Eminem
-            </li>
-            <li>
-              <img class="profpic" src="./assets/img/bts.jpg" />
-              BTS
-            </li>
-            <li>
-              <img class="profpic" src="./assets/img/posty.jpg" />
-              Post Malone
-            </li>
-          </ul>
-        </div>
-
-        <div class="topsongs">
-          <h2>Top 10 Streaming Songs</h2>
-          <ul class="song-name">
-            <li>
-              <img class="profpic" src="./assets/img/blind.jpg" />
-              Blinding Lights
-            </li>
-            <li>
-              <img class="profpic" src="./assets/img/shape.jpg" />
-              Shape of You
-            </li>
-            <li>
-              <img class="profpic" src="./assets/img/monkey.jpg" />
-              Dance Monkey
-            </li>
-            <li>
-              <img class="profpic" src="./assets/img/someone.jpg" />
-              Someone You Loved
-            </li>
-            <li>
-              <img class="profpic" src="./assets/img/rockstar.jpg" />
-              Rockstar
-            </li>
-            <li>
-              <img class="profpic" src="./assets/img/sunflower.jpg" />
-              Sunflower
-            </li>
-            <li>
-              <img class="profpic" src="./assets/img/onedance.jpg" />
-              One Dance
-            </li>
-            <li>
-              <img class="profpic" src="./assets/img/closer.jpg" />
-              Closer
-            </li>
-            <li>
-              <img class="profpic" src="./assets/img/stay.jpg" />
-              STAY (with JB)
-            </li>
-            <li>
-              <img class="profpic" src="./assets/img/believer.jpg" />
-              Believer
-            </li>
-          </ul>
-        </div>
+    <nav>
+      <div class="nav-left">
+        <img class="icon" src="./assets/img/live-music.png" alt="" />
+        <h1 href="#">GigGrabber</h1>
       </div>
+      <div class="search-container">
+        <form>
+          <input class="input" type="text" placeholder="Search an artist..." />
+          <button class="btn" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+    <section class="page">
+      <div class="results-bandsintown">
+        <div class="header-bandsintown"></div>
+        <div class="card-container"></div>
+      </div>
+      <aside class="spotify dropdown">
+        <div class="box dropbtn">
+          Spotify
+          <div class="dropdown-content">
+            <a href="#">Spotify</a>
+          </div>
+        </div>
+      </aside>
+    </section>
+
+    <div class="homepage" id="home-page">
+      <div class="topartists">
+        <h2>Top 10 Streaming Artists</h2>
+        <ul class="art-name">
+          <li>
+            <img class="profpic" src="./assets/img/drake.jpg" />
+            Drake
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/badbun.jpg" />
+            Bad Bunny
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/tayswf.jpg" />
+            Taylor Swift
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/edshee.jpg" />
+            Ed Sheeran
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/weeknd.jpg" />
+            The Weeknd
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/jb.jpg" />
+            Justin Bieber
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/arigran.jpg" />
+            Ariana Grande
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/mm.jpg" />
+            Eminem
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/bts.jpg" />
+            BTS
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/posty.jpg" />
+            Post Malone
+          </li>
+        </ul>
+      </div>
+
+      <div class="topsongs">
+        <h2>Top 10 Streaming Songs</h2>
+        <ul class="song-name">
+          <li>
+            <img class="profpic" src="./assets/img/blind.jpg" />
+            Blinding Lights
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/shape.jpg" />
+            Shape of You
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/monkey.jpg" />
+            Dance Monkey
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/someone.jpg" />
+            Someone You Loved
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/rockstar.jpg" />
+            Rockstar
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/sunflower.jpg" />
+            Sunflower
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/onedance.jpg" />
+            One Dance
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/closer.jpg" />
+            Closer
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/stay.jpg" />
+            STAY (with JB)
+          </li>
+          <li>
+            <img class="profpic" src="./assets/img/believer.jpg" />
+            Believer
+          </li>
+        </ul>
+      </div>
+    </div>
+    <script src="./assets/JS/env.js"></script>
     <script src="./assets/JS/script.js"></script>
     <!-- <script src="./assets/JS/spotify.js"></script> -->
     <script
