--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </div>
     </div>
     <script src="./assets/JS/env.js"></script>
-    <script src="./assets/JS/script.js"></script>
+    <!-- <script src="./assets/JS/script.js"></script> -->
     <script src="./assets/JS/spotify.js"></script>
     <script
       src="https://kit.fontawesome.com/3c42d1678b.js"
