--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
       </div>
       <aside class="spotify dropdown">
         <div class="box dropbtn">
-          Spotify
-          <div class="dropdown-content">
-            <a href="#">Spotify</a>
-          </div>
+          Top Tracks
+          <div class="dropdown-content"></div>
         </div>
       </aside>
     </section>
@@ -128,7 +126,7 @@
     </div>
     <script src="./assets/JS/env.js"></script>
     <script src="./assets/JS/script.js"></script>
-    <!-- <script src="./assets/JS/spotify.js"></script> -->
+    <script src="./assets/JS/spotify.js"></script>
     <script
       src="https://kit.fontawesome.com/3c42d1678b.js"
       crossorigin="anonymous"
