Added About Us to the footer & copywrite tag.

--- a/index.html
+++ b/index.html
@@ -126,6 +126,13 @@
         </ul>
       </div>
     </div>
+    <footer>
+      <h3>About Us</h3>
+      <p class="foot">
+       Lorem ipsum dolor sit amet consectetur adipisicing elit. A laboriosam, expedita fugiat nostrum, amet harum quaerat iusto odio aliquam explicabo quis dolorem voluptatem. Aliquam consectetur molestias facere libero ad dolorem.
+      </p>
+      <span>&copy; KAMJ Website Productions</span>
+    </footer>
     <script src="./assets/JS/env.js"></script>
     <script src="./assets/JS/script.js"></script>
     <!-- <script src="./assets/JS/spotify.js"></script> -->
