Added logo to footer & actual content inside about us.

--- a/index.html
+++ b/index.html
@@ -127,9 +127,12 @@
       </div>
     </div>
     <footer>
+      <div class="footer-logo">
+      <img class="icon" src="./assets/img/live-music.png" alt="" />
       <h3>About Us</h3>
+    </div>
       <p class="foot">
-       Lorem ipsum dolor sit amet consectetur adipisicing elit. A laboriosam, expedita fugiat nostrum, amet harum quaerat iusto odio aliquam explicabo quis dolorem voluptatem. Aliquam consectetur molestias facere libero ad dolorem.
+       Connecting artists with their most passionate fans. We're a dynamic live music discovery platform looking to forge a strong musical community!
       </p>
       <span>&copy; KAMJ Website Productions</span>
     </footer>
