finsihed spotify api

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <aside class="spotify dropdown">
         <div class="box dropbtn">
           Top Tracks
+          <div class="spotify-box"></div>
           <div class="dropdown-content"></div>
         </div>
       </aside>
@@ -37,43 +38,43 @@
         <ul class="art-name">
           <li>
             <img class="profpic" src="./assets/img/drake.jpg" />
-            Drake
+            <span class="top-artist-name">Drake</span>
           </li>
           <li>
             <img class="profpic" src="./assets/img/badbun.jpg" />
-            Bad Bunny
+            <span class="top-artist-name">Bad Bunny</span>
           </li>
           <li>
             <img class="profpic" src="./assets/img/tayswf.jpg" />
-            Taylor Swift
+            <span class="top-artist-name">Taylor Swift</span>
           </li>
           <li>
             <img class="profpic" src="./assets/img/edshee.jpg" />
-            Ed Sheeran
+            <span class="top-artist-name">Ed Sheeran</span>
           </li>
           <li>
             <img class="profpic" src="./assets/img/weeknd.jpg" />
-            The Weeknd
+            <span class="top-artist-name">The Weekend</span>
           </li>
           <li>
             <img class="profpic" src="./assets/img/jb.jpg" />
-            Justin Bieber
+            <span class="top-artist-name">Justin Beiber</span>
           </li>
           <li>
             <img class="profpic" src="./assets/img/arigran.jpg" />
-            Ariana Grande
+            <span class="top-artist-name">Ariana Grande</span>
           </li>
           <li>
             <img class="profpic" src="./assets/img/mm.jpg" />
-            Eminem
+            <span class="top-artist-name">Eminem</span>
           </li>
           <li>
             <img class="profpic" src="./assets/img/bts.jpg" />
-            BTS
+            <span class="top-artist-name">BTS</span>
           </li>
           <li>
             <img class="profpic" src="./assets/img/posty.jpg" />
-            Post Malone
+            <span class="top-artist-name">Post Malone</span>
           </li>
         </ul>
       </div>
