debugged spotify api, need to copy the link and req access in order to fix

--- a/index.html
+++ b/index.html
@@ -1,80 +1,6 @@
 <!DOCTYPE html>
 <html>
-
-feature/spotify_lastday
-  <body>
-    <nav>
-      <div class="nav-left">
-        <img class="icon" src="./assets/img/live-music.png" alt="" />
-        <h1 href="#">GigGrabber</h1>
-      </div>
-      <div class="search-container">
-        <form>
-          <input class="input" type="text" placeholder="Search an artist..." />
-          <button class="btn" type="submit">Search</button>
-        </form>
-      </div>
-    </nav>
-    <section class="page">
-      <div class="results-bandsintown">
-        <div class="header-bandsintown"></div>
-        <div class="card-container"></div>
-      </div>
-      <aside class="spotify dropdown">
-        <div class="box dropbtn">
-          Top Tracks
-          <div class="spotify-box"></div>
-          <div class="dropdown-content"></div>
-        </div>
-      </aside>
-    </section>
-
-    <div class="homepage" id="home-page">
-      <div class="topartists">
-        <h2>Top 10 Streaming Artists</h2>
-        <ul class="art-name">
-          <li>
-            <img class="profpic" src="./assets/img/drake.jpg" />
-            <span class="top-artist-name">Drake</span>
-          </li>
-          <li>
-            <img class="profpic" src="./assets/img/badbun.jpg" />
-            <span class="top-artist-name">Bad Bunny</span>
-          </li>
-          <li>
-            <img class="profpic" src="./assets/img/tayswf.jpg" />
-            <span class="top-artist-name">Taylor Swift</span>
-          </li>
-          <li>
-            <img class="profpic" src="./assets/img/edshee.jpg" />
-            <span class="top-artist-name">Ed Sheeran</span>
-          </li>
-          <li>
-            <img class="profpic" src="./assets/img/weeknd.jpg" />
-            <span class="top-artist-name">The Weekend</span>
-          </li>
-          <li>
-            <img class="profpic" src="./assets/img/jb.jpg" />
-            <span class="top-artist-name">Justin Beiber</span>
-          </li>
-          <li>
-            <img class="profpic" src="./assets/img/arigran.jpg" />
-            <span class="top-artist-name">Ariana Grande</span>
-          </li>
-          <li>
-            <img class="profpic" src="./assets/img/mm.jpg" />
-            <span class="top-artist-name">Eminem</span>
-          </li>
-          <li>
-            <img class="profpic" src="./assets/img/bts.jpg" />
-            <span class="top-artist-name">BTS</span>
-          </li>
-          <li>
-            <img class="profpic" src="./assets/img/posty.jpg" />
-            <span class="top-artist-name">Post Malone</span>
-          </li>
-        </ul>
-      </div>
+    
 <head>
   <title>GigGrabber</title>
   <link rel="stylesheet" href="./assets/css/style.css" />
@@ -87,18 +13,6 @@ feature/spotify_lastday
       <h1 href="#">GigGrabber</h1>
     </div>
 
-    <!-- <ul class="navbar">
-      <li class="navitem">
-        <a href="#home-page">Home</a>
-      </li>
-      <li class="navitem">
-        <a href="#about">About</a>
-      </li>
-      <li class="navitem">
-        <a href="#results">Results</a>
-      </li>
-    </ul> -->
-
     <div class="search-container">
       <form>
         <input class="input" type="text" placeholder="Search an artist..." />
@@ -107,17 +21,16 @@ feature/spotify_lastday
     </div>
   </nav>
 
-  <section class="page" id="results">
+  <section class="page">
     <div class="results-bandsintown">
       <div class="header-bandsintown"></div>
       <div class="card-container"></div>
     </div>
     <aside class="spotify dropdown">
       <div class="box dropbtn">
-        Spotify
-        <div class="dropdown-content">
-          <a href="#">Spotify</a>
-        </div>
+        Top Tracks
+        <div class="spotify-box"></div>
+        <div class="dropdown-content"></div>
       </div>
     </aside>
   </section>
@@ -128,47 +41,46 @@ feature/spotify_lastday
       <ul class="art-name">
         <li class="toplist">
           <img class="profpic" src="./assets/img/drake.jpg" />
-          Drake
+          <span class="top-artist-name">Drake</span>
         </li>
         <li class="toplist">
           <img class="profpic" src="./assets/img/badbun.jpg" />
-          Bad Bunny
+          <span class="top-artist-name">Bad Bunny</span>
         </li>
         <li class="toplist">
           <img class="profpic" src="./assets/img/tayswf.jpg" />
-          Taylor Swift
+          <span class="top-artist-name">Taylor Swift</span>
         </li>
         <li class="toplist">
           <img class="profpic" src="./assets/img/edshee.jpg" />
-          Ed Sheeran
+          <span class="top-artist-name">Ed Sheeran</span>
         </li>
         <li class="toplist">
           <img class="profpic" src="./assets/img/weeknd.jpg" />
-          The Weeknd
+          <span class="top-artist-name">The Weekend</span>
         </li>
         <li class="toplist">
           <img class="profpic" src="./assets/img/jb.jpg" />
-          Justin Bieber
+          <span class="top-artist-name">Justin Beiber</span>
         </li>
         <li class="toplist">
           <img class="profpic" src="./assets/img/arigran.jpg" />
-          Ariana Grande
+          <span class="top-artist-name">Ariana Grande</span>
         </li>
         <li class="toplist">
           <img class="profpic" src="./assets/img/mm.jpg" />
-          Eminem
+          <span class="top-artist-name">Eminem</span>
         </li>
         <li class="toplist">
           <img class="profpic" src="./assets/img/bts.jpg" />
-          BTS
+          <span class="top-artist-name">BTS</span>
         </li>
         <li class="toplist">
           <img class="profpic" src="./assets/img/posty.jpg" />
-          Post Malone
+          <span class="top-artist-name">Post Malone</span>
         </li>
       </ul>
     </div>
-
 
     <div class="topsongs">
       <h2>Top 10 Streaming Songs</h2>
@@ -229,7 +141,7 @@ feature/spotify_lastday
   </footer>
   <script src="./assets/JS/env.js"></script>
   <script src="./assets/JS/script.js"></script>
-  <!-- <script src="./assets/JS/spotify.js"></script> -->
+  <script src="./assets/JS/spotify.js"></script>
   <script src="https://kit.fontawesome.com/3c42d1678b.js" crossorigin="anonymous"></script>
 </body>
 
