styled the spotify box

--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
       <div class="header-bandsintown"></div>
       <div class="card-container"></div>
     </div>
-    <aside class="spotify dropdown">
-      <div class="box dropbtn">
-        Top Tracks
+    <aside class="spotify">
+      <div class="box">
+        <h2>Top Tracks</h2>
+        <p class="request">
+          Please visit this <a href="https://cors-anywhere.herokuapp.com">link</a> and request access to get Top Tracks.
+        </p>
         <div class="spotify-box"></div>
-        <div class="dropdown-content"></div>
       </div>
     </aside>
   </section>
