--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="box">
         <h2>Top Tracks</h2>
         <p class="request">
-          Please visit this <a href="https://cors-anywhere.herokuapp.com">link</a> and request access to get Top Tracks.
+          <!-- Please visit this <a href="https://cors-anywhere.herokuapp.com">link</a> and request access to get Top Tracks. -->
         </p>
         <div class="spotify-box"></div>
       </div>
