added spotify logo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     </div>
     <aside class="spotify">
       <div class="box">
-        <h2>Top Tracks</h2>
+        <img src="./assets/img/Spotify_Logo_RGB_Green.png" class="spotifyLogo"/>
+        <h2 class="toptracks">Top Tracks</h2>
         <p class="request">
           <!-- Please visit this <a href="https://cors-anywhere.herokuapp.com">link</a> and request access to get Top Tracks. -->
         </p>
