--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       </div>
       <aside class="spotify">
         <div class="box">
+          <img
+            src="./assets/img/Spotify_Logo_RGB_Green.png"
+            class="spotifyLogo"
+          />
           <h2>Top Tracks</h2>
           <div class="spotify-box"></div>
         </div>
