comments and clear button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <div class="search-container">
         <form>
           <input class="input" type="text" placeholder="Search an artist..." />
-          <button class="btn" type="submit">Search</button>
+          <button class="btn" id="search" type="submit">Search</button>
+          <button class="btn" id="clear" type="submit">Clear</button>
         </form>
       </div>
     </nav>
@@ -147,7 +148,7 @@
       <span>&copy; KAMJ Website Productions</span>
     </footer>
     <script src="./assets/JS/env.js"></script>
-    <script src="./assets/JS/script.js"></script>
+    <script src="./assets/JS/bandsintown.js"></script>
     <script src="./assets/JS/spotify.js"></script>
     <script
       src="https://kit.fontawesome.com/3c42d1678b.js"
